fixed letter spacing

--- a/style/style.css
+++ b/style/style.css
@@ -289,13 +289,12 @@ p#gl {
     padding:0 0;
     margin:0 0;
     font-family: 'tan';
-    font-size: 15em;
-    letter-spacing:-1.75em;
+    font-size: 10em;
+    letter-spacing:-.1em;
     line-height: .75em;
 }
 .tan#nicole {
-    font-size: 10em;
-    letter-spacing: -1em;
+    font-size: 8em;
 }
 .dot {
     height: 80px;
